# SLIMHUB_v2

./: .gitignore  README.md  ble_nus_central.py  pyproject.toml  requirements.txt
slimhub/: __init__.py  config.py  daemon.py  events.py
slimhub/ble/: __init__.py  central.py  device_session.py  registry.py  scanner.py
slimhub/cli/: __init__.py  app.py  client.py  server.py
slimhub/logging/: __init__.py  raw_logger.py
slimhub/protocol/: __init__.py  nus.py
slimhub/unitspace/: __init__.py  estimator.py
tests/: __init__.py  test_cli_server.py  test_protocol.py  test_raw_logger.py  test_registry.py  test_unitspace.py
